# zksync-upgrade-verification-rs

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  install.sh
.github/workflows/: cargo.yml
src/: main.rs
test-data/: zip5.json
wix/: main.wxs
