[package]
name = "zkgov-check"
version = "0.0.1"
edition = "2021"
authors = ["ubermensch3dot0"]
description = "ZkSync Upgrade Verification Tool"
repository = "https://github.com/cyfrin/zksync-upgrade-verification-rs"

[package.metadata.wix]
upgrade-guid = "02BDA236-865B-4760-A76D-E6178DF4DBFA"
path-guid = "2517C371-5A8C-4143-8583-E833C9CB84B6"
license = false
eula = false


[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
tokio = { version = "1.38", features = ["full"] }
env_logger = "0.11"
log = "0.4"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
