[package]
name = "zkgov-check"
version = "0.0.2"
edition = "2021"
authors = ["ubermensch3dot0"]
description = "ZkSync Upgrade Verification Tool"


[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
tokio = { version = "1.38", features = ["full"] }
env_logger = "0.11"
log = "0.4"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
